<resources>
    <string name="app_name">A la santé de &#8230;</string>

    <string name="admob_app_id">ca-app-pub-5168307355330093~5228575834</string>
    <string name="admob_pub_id">ca-app-pub-5168307355330093/7010407270</string>
    <string name="test_admob_pub_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="hello">Boire ou jouer, pourquoi choisir&#8230; Bienvenue sur <b>\"A la santé de&#8230;\"</b>, le jeu
        d\'alcool en votant chacun son tour pour le plus alcoolique, le plus dragueur, le plus flemmard&#8230;\n A la
        vôtre !</string>
    <string name="player">Joueur</string>
    <string name="player1">Joueur1</string>
    <string name="player2">Joueur2</string>
    <string name="player3">Joueur3</string>
    <string name="addUsers">AJOUTER JOUEURS</string>
    <string name="addUser">Ajouter joueur</string>
    <string name="error_nb_players">Ce jeu n\'a aucun intérêt si vous n\'êtes pas au moins 3 joueurs ! Faut arrêter l\'alcool
        maintenant &#8230;</string>
    <string name="soft">SOFT</string>
    <string name="hard">HARD</string>
    <string name="title_alert">Etes vous sûr d\'utiliser le mode hard ?</string>
    <string name="message_alert">Ce mode contient des questions assez osées, à n\'utiliser qu\'avec des personnes majeures et qui ne sont pas
    facilement choquées !</string>
    <string name="play">Jouer</string>
    <string name="cancel">Annuler</string>
    <string name="to_you">A toi de jouer :</string>
    <string name="pass">Passer la question</string>
    <string name="go_again">C\'est reparti !</string>
    <string name="sentence_lose">Les joueurs ont voté, et leur sentence est irrévocable !\n<b>A la santé de &#8230;</b></string>
    <string name="error_internet">Vérifiez votre connexion internet &#8230;</string>
    
    <!--SOFT-->
    <string name="worst_student">Qui était le / la plus mauvais(e) en cours ?</string>
    <string name="most_intelligent">Qui est le / la plus intelligent(e) ?</string>
    <string name="most_sleep">Qui est le / la plus dormeur / dormeuse ?</string>
    <string name="most_roisterer">Qui est le / la plus fêtard(e) ?</string>
    <string name="most_emotional">Qui est le / la plus émotif / émotive ?</string>
    <string name="most_arrogant">Qui est le / la plus arrogant(e) ?</string>
    <string name="most_skinflint">Qui est le / la plus radin(e) ?</string>
    <string name="worst_cook">Qui est le pire cuisinier ?</string>
    <string name="most_snore">Qui ronfle le plus ?</string>
    <string name="most_shy">Qui est le / la plus timide ?</string>
    <string name="most_shopping">Qui est le / la plus accro au shopping ?</string>
    <string name="most_talkative">Qui est le / la plus bavard(e) ?</string>
    <string name="worst_singer">Qui est le pire chanteur ?</string>
    <string name="best_english">Qui parle le mieux anglais ?</string>
    <string name="worst_english">Qui parle le moins bien anglais ?</string>
    <string name="best_sport">Qui est le / la plus sportif / sportive ?</string>
    <string name="most_cry">Qui pleure le plus devant des films ?</string>
    
    <!--BOTH-->
    <string name="most_alcoholic">Qui est le / la plus résistant(e) à l\'alcool ?</string>
    <string name="worst_alcoholic">Qui tient le moins l\'alcool ?</string>
    <string name="most_beautiful_boy">Qui est le plus beau mec / la plus belle fille parmi tous les joueurs ?</string>
    <string name="most_dredger">Qui est le / la plus dragueur / dragueuse ?</string>
    <string name="worst_dredger">Qui est le / la pire dragueur / dragueuse ?</string>
    <string name="most_slackness">Qui est le / la plus flemmard ?</string>
    <string name="most_drunk">Qui est le / la plus bourré(e) ?</string>
    <string name="worst_drunk">Qui n\'a pas encore assez bu et va boire après cette question ?</string>
    <string name="most_extrovert">Qui est le / la plus extraverti(e) ?</string>
    <string name="most_loyal">Qui est le / la plus fidèle en couple ?</string>
    <string name="most_spew">Qui vomit à chaque soirée ?</string>
    <string name="most_lier">Qui est le / la plus gros(se) menteur / menteuse ?</string>
    <string name="most_duck">Qui est le plus canard ?</string>
    <string name="worst_driver">Qui est le pire chauffard sur la route ?</string>
    <string name="worst_character">Qui a le pire caractère ?</string>
    <string name="justin_bieber">Qui écoute du Justin Bieber en cachette ?</string>
    <string name="kiss_celebrity">Qui pourrait embrasser une affiche d\'une célébrité ?</string>
    <string name="lie_for_game">Qui a menti exprès pour faire boire quelqu\'un en particulier?</string>

    <!--HARD-->
    <string name="most_precocious">Qui est le plus précoce ?</string>
    <string name="best_shot">Qui est le meilleur coup au lit ?</string>
    <string name="worst_shot">Qui est le pire coup au lit ?</string>
    <string name="most_apt_milf">Qui est le plus susceptible de se taper une MILF ?</string>
    <string name="most_sex_like">Qui aime le plus le sexe ?</string>
    <string name="most_apt_bit_h">Qui est le plus susceptible d\'aller voir une p*te ?</string>
    <string name="most_cheater">Qui est le / la plus susceptible de tromper sa meuf / son mec ?</string>
    <string name="most_sado">Qui pourrait être le prochain Christian Grey ? (espèce de sadique)</string>
    <string name="most_michto">Qui est la plus michtonneuse ?</string>
    <string name="most_masturbate">Qui se masturbe le plus par jour ?</string>
    <string name="worst_stink">Qui pue le plus ?</string>
    <string name="eat_shit">Qui pourrait le plus manger ses propres excréments ?</string>
    <string name="most_sister">Qui pourrait coucher avec quelqu\'un de sa famille ?</string>
    <string name="mistake_name">Qui pourrait se tromper de nom pendant l\acte ?</string>
    <string name="fake_orgasm">Qui pourrait le plus faire semblant d\'avoir un orgasme ?</string>
    <string name="get_nudes">Qui réclame le plus de nudes ?</string>
    <string name="send_nudes">Qui envoie le plus de nudes ?</string>
    <string name="sex_here">Qui a le plus envie de coucher avec une personne ici ?</string>
    <string name="polygame">Qui est le plus polygame ?</string>
    <string name="sextoys">Qui aime le plus les sextoys ?</string>

</resources>
