<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_beer"
        android:alpha="0.75"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="64dp"
            android:fontFamily="monospace"
            android:text="@string/player"
            android:textColor="@color/beer"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/toYou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_you"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textSize="24sp"
            android:fontFamily="serif-monospace" />

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/worst_student"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <GridView
            android:id="@+id/gridview"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/background_rectangle"
            android:columnWidth="150dp"
            android:gravity="start"
            android:numColumns="2">

        </GridView>

    </LinearLayout>

    <Button
        android:id="@+id/pass"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/pass"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:background="@null" />
</RelativeLayout>